fatto parte grafica di modifica luogo

--- a/src/app/componenti/luogo/luogo.component.html
+++ b/src/app/componenti/luogo/luogo.component.html
@@ -68,7 +68,7 @@
 
         <div class="container-emozioni">
             <div class="button-container" matRipple *ngFor="let obiettivo of  luogo.obiettivi; index as i ">
-                <button matRipple type="button" class="emozione" (click)="esploraAnimaLocus(luogo.id,i)"
+                <button matRipple type="button" class="obiettivo" (click)="esploraAnimaLocus(luogo.id,i)"
                     value="{{obiettivo.nome}} " matBadge="{{obiettivo.container.length}}">
                     <div class="icon-button">
                         <svg-icon src="{{getIconByName(obiettivo.nome)}}"></svg-icon>
