--- a/src/app/componenti/modifica-luogo-view/modifica-luogo-view.component.css
+++ b/src/app/componenti/modifica-luogo-view/modifica-luogo-view.component.css
@@ -98,7 +98,7 @@
   justify-content: center;
 }
 
-.emozione {
+.obiettivo {
   width: 105px;
   height: 100px;
   border: none;
@@ -114,7 +114,7 @@
   box-shadow: 5px 10px 10px 0px hwb(0deg 25.35% 74.65% / 20%);
 }
 @media only screen and (max-width: 320px) {
-  .emozione {
+  .obiettivo {
     width: 80px;
     height: 80px;
     font-size: x-small;
