+ aggiungi obiettivo luogo

--- a/src/app/componenti/modifica-luogo/modifica-luogo.component.css
+++ b/src/app/componenti/modifica-luogo/modifica-luogo.component.css
@@ -175,3 +175,8 @@
   border: #d51a52 1px solid;
   font-weight: bold;
 }
+
+.anima-locus-container{
+  display: flex;
+  justify-content: space-between;
+}
