--- a/src/app/dialogs/aggiungi-emozioni-dialog/aggiungi-emozioni-dialog.component.css
+++ b/src/app/dialogs/aggiungi-emozioni-dialog/aggiungi-emozioni-dialog.component.css
@@ -44,6 +44,16 @@
   width: 240px;
 }
 
+
+.button:disabled,
+.button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+  background-image: none !important;
+}
+
+
 .aggiungi-container{
   padding-top: 1rem;
   display: flex;
