iniziato dialog aggiungi commento

--- a/src/app/componenti/cerca/cerca.component.css
+++ b/src/app/componenti/cerca/cerca.component.css
@@ -7,6 +7,13 @@
   padding-inline: 1rem;
 }
 
+.caricamento-container{
+  display: flex;
+  padding-top: 40px;
+  justify-content: space-evenly;
+  background-color: transparent;
+}
+
 .sezione {
   width: 100%;
   height: max-content;
