--- a/src/app/componenti/luogo/luogo.component.html
+++ b/src/app/componenti/luogo/luogo.component.html
@@ -1,5 +1,8 @@
 <div class="container">
+    <div class="caricamento-container" *ngIf="!(luogo$ | async)">
 
+        <mat-spinner></mat-spinner>
+    </div>
     <ng-container *ngIf="luogo$| async; let luogo">
 
         
@@ -49,6 +52,66 @@
                 <button class="link-utile" (click)="navigaLink(luogo.info)"><svg-icon src="assets/Icons/exit_to_app.svg"></svg-icon>  {{luogo.info}}</button>
             </div>
         </div>
+
+        <div class="sezione" >
+            <div class="titolo-container">
+                <h4 class="sottosezione">Recensioni STEP</h4>
+            </div>
+
+            <div class="comment-container" *ngIf="getCommentiSTEP(luogo)">
+                <ng-container *ngIf="getCommentiSTEP(luogo).length == 0">
+                    <div class="empty-container">
+
+                        <p class="empty-paragraph">Al momento non sono presenti commenti STEP per questo luogo</p>
+                    </div>
+                </ng-container>
+                <ng-container *ngFor="let commento of getCommentiSTEP(luogo)">
+                    <div class="comment">
+                        <div class="comment-header">
+                            <div class="stars">
+                                <star-rating [starType]="'svg'" [readOnly]="true"
+                                    [rating]="commento.recensione"></star-rating>
+                            </div>
+    
+                            <div>
+                                <svg-icon [svgStyle]="{ 'width.px':30 }" src="assets/Icons/STEP_icon.svg"></svg-icon>
+                                <button mat-icon-button [matMenuTriggerFor]="menu" >
+                                    <mat-icon>more_vert</mat-icon>
+                                  </button>
+                                  <mat-menu #menu="matMenu">
+                                    <button mat-menu-item>
+                                      <span>Condividi Recensione</span>
+                                    </button>
+                                    <!-- Solo se lo user che user uid === luogo.commenti.idCreatore -->
+                                    <ng-container *ngIf=" authService.currentUser$ | async; let user ">
+                                            <button mat-menu-item *ngIf="user.uid === luogo.commenti.idCreatore">
+                                                <span>Elimina Recensione</span>
+                                            </button>
+                                        
+                                    </ng-container>
+                                    
+                                  </mat-menu>
+                            </div>
+                        </div>
+                        <div class="commment-content">
+                            <p class="comment-title">{{commento.titolo}}</p>
+                            <p class="comment-desc">
+                                {{commento.descrizione}}
+                            </p>
+                        </div>
+                        <div class="comment-footer">
+                            <p class="comment-location">{{commento.luogo}}</p>
+                        </div>
+                    </div>
+                </ng-container>
+            </div>
+
+            <div class="aggiungi-button-container">
+                <button class="button" *ngIf="authService.currentUser$ | async" matRipple (click)="apriCommentoDialog(luogo.id)">Aggiungi Commento</button>
+            </div>
+        </div>
+
+
         <div class="sezione">
             <div class="titolo-container">
                 <h4 class=" sottosezione">Emozioni Correlate</h4>
@@ -88,7 +151,6 @@
             </div>
         </div>
     </ng-container>
-
 
 
 </div>
