fix posizione della sidenav che scrolla + aggiunto la possibilità di creare un commento ad un luogo + possibilità di un utente di eliminare un proprio commento + aggiunto dialog per la creazione un commento

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -10,6 +10,15 @@ mat-toolbar {
   background-color: #E2DCD5;
 }
 
+mat-drawer  {
+  position:fixed;
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+mat-drawer::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
+}
+
 .menu-button {
   color: #d2b48c;
   background-color: white;
