--- a/src/app/dialogs/aggiungi-commento/aggiungi-commento.component.html
+++ b/src/app/dialogs/aggiungi-commento/aggiungi-commento.component.html
@@ -16,7 +16,7 @@
                         Come valuteresti la tua esperienza?
                     </p>
                     <div class="stars">
-                        <star-rating-control [starType]="'svg'" formControlName="rating" [size]="'medium'" style="justify-content: left;"
+                        <star-rating-control [starType]="'svg'" formControlName="recensione" [size]="'medium'" style="justify-content: left;"
                             ></star-rating-control>
                     </div>
                 </div>
