aggiunto idCreatore a emozioni Luogo e nei contenuti degli anima locus + fix visualizzazione e ricerca di emozioni con il nuovo formato (le emozioni ora è un array di stringhe oppure di oggetti {emozione: string, idCreatore: string})

--- a/src/app/componenti/luogo/luogo.component.html
+++ b/src/app/componenti/luogo/luogo.component.html
@@ -119,9 +119,13 @@
             <div class="emozioni-container">
                 <mat-chip matRipple (click)="aggiungiEmozione(luogo.id)" class="chip aggiungi-button"
                     *ngIf="authService.currentUser$ | async">Aggiungi</mat-chip>
+                
+                <!--TODO: se idCreatore===uid allora posso rimuoverlo-->
                 <mat-chip disabled class="chip" *ngFor="let emozione of luogo.emozioni">
-
-                    {{toCap(emozione)}}
+                    <ng-container *ngIf="!emozione['idCreatore']">{{toCap(emozione)}}</ng-container>
+                    <ng-container *ngIf="emozione['idCreatore']">
+                        {{toCap(emozione['emozione'])}}
+                    </ng-container>
 
                 </mat-chip>
 
