--- a/src/app/dialogs/aggiungi-anima/aggiungi-anima.component.html
+++ b/src/app/dialogs/aggiungi-anima/aggiungi-anima.component.html
@@ -23,7 +23,7 @@
 
         <div class="completato" *ngIf="!caricamento && completato">
             <h3 class="accettato-text">
-                L'immagine è stato caricato
+                Anima Locus aggiunto!
             </h3>
         </div>
         <div *ngIf="!caricamento && !completato">
